--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 <link rel='stylesheet' type='text/css' href='css/form.css'>
+<link rel='stylesheet' type='text/css' href='css/story.css'>
 </head>
 <body>
   <div ng-app='StoryApp'>
