single page story attempt

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src='js/controllers/tocCtrl.js'></script>
 <script src='js/controllers/storyCtrl.js'></script>
 <script src='js/controllers/formCtrl.js'></script>
+<script src='js/controllers/lambCtrl.js'></script>
 
 
 </body>
