second story working

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+<link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 <link rel='stylesheet' type='text/css' href='css/form.css'>
 <link rel='stylesheet' type='text/css' href='css/story.css'>
@@ -18,6 +19,8 @@
 <script src='js/controllers/storyCtrl.js'></script>
 <script src='js/controllers/formCtrl.js'></script>
 <script src='js/controllers/lambCtrl.js'></script>
+<script src='js/controllers/pigCtrl.js'></script>
+
 
 
 </body>
