added styling to form pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <head>
-<link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')>
+<link rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 <link rel='stylesheet' type='text/css' href='css/form.css'>
 <link rel='stylesheet' type='text/css' href='css/story.css'>
+<link rel='stylesheet' type='text/css' href='css/toc.css'>
 </head>
 <body>
   <div ng-app='StoryApp'>
@@ -20,6 +21,7 @@
 <script src='js/controllers/formCtrl.js'></script>
 <script src='js/controllers/lambCtrl.js'></script>
 <script src='js/controllers/pigCtrl.js'></script>
+<script src='js/controllers/stalkCtrl.js'></script>
 
 
 
