added how to page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src='js/controllers/lambCtrl.js'></script>
 <script src='js/controllers/pigCtrl.js'></script>
 <script src='js/controllers/stalkCtrl.js'></script>
+<script src='js/controllers/howCtrl.js'></script>
 
 
 
