--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel='stylesheet' type='text/css' href='css/form.css'>
 <link rel='stylesheet' type='text/css' href='css/story.css'>
 <link rel='stylesheet' type='text/css' href='css/toc.css'>
+<link rel='stylesheet' type='text/css' href='css/how.css'>
 </head>
 <body>
   <div ng-app='StoryApp'>
