added firebase data

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     </div>
   </div>
 
-
+<!-- Bower components -->
 <script src='bower_components/angular/angular.js'></script>
 <script src='bower_components/angular-route/angular-route.js'></script>
+<script src="bower_components/firebase/firebase.js"></script>
+<!-- local scripts -->
 <script src='js/controllers/app.js'></script>
 <script src='js/controllers/mainCtrl.js'></script>
 <script src='js/controllers/tocCtrl.js'></script>
