angular fire connected

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <script src='bower_components/angular/angular.js'></script>
 <script src='bower_components/angular-route/angular-route.js'></script>
 <script src="bower_components/firebase/firebase.js"></script>
+<script src='bower_components/angularfire/dist/angularfire.min.js'></script>
 <!-- local scripts -->
 <script src='js/controllers/app.js'></script>
+<script src='js/controllers/authCtrl.js'></script>
 <script src='js/controllers/mainCtrl.js'></script>
 <script src='js/controllers/tocCtrl.js'></script>
 <script src='js/controllers/storyCtrl.js'></script>
