removed extra code in app.js

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 <script src='js/controllers/authCtrl.js'></script>
 <script src='js/controllers/mainCtrl.js'></script>
 <script src='js/controllers/tocCtrl.js'></script>
-<script src='js/controllers/storyCtrl.js'></script>
-<script src='js/controllers/formCtrl.js'></script>
+<!-- <script src='js/controllers/storyCtrl.js'></script>
+<script src='js/controllers/formCtrl.js'></script> -->
 <script src='js/controllers/lambCtrl.js'></script>
 <script src='js/controllers/pigCtrl.js'></script>
 <script src='js/controllers/stalkCtrl.js'></script>
 <script src='js/controllers/howCtrl.js'></script>
+<script src='js/controllers/classicCtrl.js'></script>
+
 
 
 
