rerouted table of contents, styled toc button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel='stylesheet' type='text/css' href='css/story.css'>
 <link rel='stylesheet' type='text/css' href='css/toc.css'>
 <link rel='stylesheet' type='text/css' href='css/how.css'>
+<link rel='stylesheet' type='text/css' href='css/buttons.css'>
+
 </head>
 <body>
   <div ng-app='StoryApp'>
