--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src='bower_components/angular-route/angular-route.js'></script>
 <script src="bower_components/firebase/firebase.js"></script>
 <script src='bower_components/angularfire/dist/angularfire.min.js'></script>
+<script src='bower_components/angular-auto-focus/angular-auto-focus.js'></script>
 <!-- local scripts -->
 <script src='js/controllers/app.js'></script>
 <script src='js/controllers/authCtrl.js'></script>
