--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <head>
+<!-- CDNs -->
 <link rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+<!-- Local CSS -->
 <link rel='stylesheet' type='text/css' href='css/form.css'>
 <link rel='stylesheet' type='text/css' href='css/story.css'>
 <link rel='stylesheet' type='text/css' href='css/toc.css'>
