--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script src='bower_components/angular-auto-focus/angular-auto-focus.js'></script>
 <!-- local scripts -->
 <script src='js/controllers/app.js'></script>
+
 <script src='js/controllers/authCtrl.js'></script>
 <script src='js/controllers/mainCtrl.js'></script>
 <script src='js/controllers/tocCtrl.js'></script>
@@ -36,6 +37,8 @@
 <script src='js/controllers/stalkCtrl.js'></script>
 <script src='js/controllers/howCtrl.js'></script>
 <script src='js/controllers/classicCtrl.js'></script>
+<script src='js/controllers/midasCtrl.js'></script>
+
 
 
 
