--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <div ng-app='StoryApp'>
+  <div class="container-fluid" ng-app='StoryApp'>
     <div ng-view>
     </div>
   </div>
@@ -24,21 +24,21 @@
 <script src="bower_components/firebase/firebase.js"></script>
 <script src='bower_components/angularfire/dist/angularfire.min.js'></script>
 <script src='bower_components/angular-auto-focus/angular-auto-focus.js'></script>
-<!-- local scripts -->
+
+<!-- Local scripts -->
 <script src='js/controllers/app.js'></script>
 
-<script src='js/controllers/authCtrl.js'></script>
+<!-- Local controllers -->
+<!-- <script src='js/controllers/authCtrl.js'></script> -->
 <script src='js/controllers/mainCtrl.js'></script>
 <script src='js/controllers/tocCtrl.js'></script>
-<!-- <script src='js/controllers/storyCtrl.js'></script>
-<script src='js/controllers/formCtrl.js'></script> -->
 <script src='js/controllers/lambCtrl.js'></script>
 <script src='js/controllers/pigCtrl.js'></script>
 <script src='js/controllers/stalkCtrl.js'></script>
 <script src='js/controllers/howCtrl.js'></script>
 <script src='js/controllers/classicCtrl.js'></script>
 <script src='js/controllers/midasCtrl.js'></script>
-
+<script src='js/controllers/baaCtrl.js'></script>
 
 
 
