--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <link rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link href="/bower_components/bootstrap-material-design/dist/css/roboto.min.css" rel="stylesheet">
+<!-- <link href="/bower_components/bootstrap-material-design/dist/css/material.min.css" rel="stylesheet"> -->
+<link href="/bower_components/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
 
 <!-- Local CSS -->
 <link rel='stylesheet' type='text/css' href='css/form.css'>
@@ -24,6 +27,7 @@
 <script src="bower_components/firebase/firebase.js"></script>
 <script src='bower_components/angularfire/dist/angularfire.min.js'></script>
 <script src='bower_components/angular-auto-focus/angular-auto-focus.js'></script>
+
 
 <!-- Local scripts -->
 <script src='js/controllers/app.js'></script>
