added new story, made name bold

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <script src='js/controllers/classicCtrl.js'></script>
 <script src='js/controllers/midasCtrl.js'></script>
 <script src='js/controllers/baaCtrl.js'></script>
+<script src='js/controllers/CodeCtrl.js'></script>
+
 
 
 
