--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 <!-- CDNs -->
-<link rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css'>
+<link rel='stylesheet', href='./bower_components/bootstrap/dist/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href="/bower_components/bootstrap-material-design/dist/css/roboto.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
 <script src='js/controllers/classicCtrl.js'></script>
 <script src='js/controllers/midasCtrl.js'></script>
 <script src='js/controllers/baaCtrl.js'></script>
-<script src='js/controllers/CodeCtrl.js'></script>
+<script src='js/controllers/codeCtrl.js'></script>
 
 
 
