this commit will return the app to a previous color scheme and fix hard to read text.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel='stylesheet' type='text/css' href='css/toc.css'>
 <link rel='stylesheet' type='text/css' href='css/how.css'>
 <link rel='stylesheet' type='text/css' href='css/buttons.css'>
-<link rel='stylesheet' type='text/css' href='css/input.scss'>
+<!--link rel='stylesheet' type='text/css' href='css/input.scss' -->
 <link rel='stylesheet' type='text/css' href='css/output.css'>
 
 </head>
