--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link rel='stylesheet' type='text/css' href='css/toc.css'>
 <link rel='stylesheet' type='text/css' href='css/how.css'>
 <link rel='stylesheet' type='text/css' href='css/buttons.css'>
-<!--link rel='stylesheet' type='text/css' href='css/input.scss' -->
-<link rel='stylesheet' type='text/css' href='css/output.css'>
+<!--link rel='stylesheet' type='text/css' href='css/input.scss'
+<link rel='stylesheet' type='text/css' href='css/output.css'> -->
 
 </head>
 <body>
